--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "author": {
     "name": "Fynn Becker",
-    "email": "info@fynn-becker.de"
+    "email": "post@fynn.be"
   },
   "bugs": {
     "url": "https://github.com/pangolinjs/stylelint-config/issues",
-    "email": "info@fynn-becker.de"
+    "email": "post@fynn.be"
   },
   "keywords": [
     "pangolin",
@@ -31,19 +31,20 @@
     "yarn.lock"
   ],
   "dependencies": {
-    "stylelint-config-sass-guidelines": "^5.3.0",
-    "stylelint-order": "^2.1.0",
-    "stylelint-scss": "^3.5.4"
+    "stylelint-config-sass-guidelines": "^6.0.0",
+    "stylelint-order": "^3.0.0",
+    "stylelint-scss": "^3.6.1"
   },
   "peerDependencies": {
-    "stylelint": "^9.9.0"
+    "stylelint": "^10.0.1"
   },
   "devDependencies": {
     "eslint": "^5.15.1",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "standard-version": "^6.0.1"
   }
 }
