--- a/package.json
+++ b/package.json
@@ -32,13 +32,10 @@
   "files": [
     "index.js"
   ],
-  "dependencies": {
-    "stylelint-config-sass-guidelines": "^7.0.0",
+  "peerDependencies": {
+    "stylelint": "^13.5.0",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.17.2"
-  },
-  "peerDependencies": {
-    "stylelint": "^13.5.0"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
@@ -48,6 +45,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "standard-version": "^8.0.0",
-    "stylelint": "^13.5.0"
+    "stylelint": "^13.5.0",
+    "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.17.2"
   }
 }
