--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "author": {
     "name": "Fynn Becker",
-    "email": "post@fynn.be"
+    "email": "fynn@hey.com"
   },
   "bugs": {
     "url": "https://github.com/pangolinjs/stylelint-config/issues",
-    "email": "post@fynn.be"
+    "email": "fynn@hey.com"
   },
   "keywords": [
     "pangolinjs",
@@ -33,20 +33,20 @@
     "index.js"
   ],
   "peerDependencies": {
-    "stylelint": "^13.5.0",
-    "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.17.2"
+    "stylelint": "^13.6.1",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0"
   },
   "devDependencies": {
-    "eslint": "^7.1.0",
+    "eslint": "^7.4.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "standard-version": "^8.0.0",
-    "stylelint": "^13.5.0",
-    "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.17.2"
+    "stylelint": "^13.6.1",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0"
   }
 }
