chore: Add test command
For now this only validates the configuration and should be expanded in the future.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "lint": "eslint --cache --format codeframe .",
+    "test": "stylelint test.scss",
     "release": "standard-version"
   },
   "main": "index.js",
