--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,18 @@ jobs:
         run: npm ci
       - name: Lint JS
         run: npm run lint
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@master
+      - name: Set up Node.js
+        uses: actions/setup-node@master
+        with:
+          node-version: 14
+      - name: Install dependencies
+        run: npm ci
+      - name: Test configuration
+        run: npm run test
