--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "author": {
     "name": "Fynn Becker",
-    "email": "fynn@hey.com"
+    "email": "post@fynn.be"
   },
   "bugs": {
     "url": "https://github.com/pangolinjs/stylelint-config/issues",
-    "email": "fynn@hey.com"
+    "email": "post@fynn.be"
   },
   "keywords": [
     "pangolinjs",
@@ -30,19 +30,19 @@
   "files": [
     "index.js"
   ],
-  "peerDependencies": {
-    "stylelint": "^13.12.0",
+  "devDependencies": {
+    "eslint": "^7.28.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "standard-version": "^9.3.0",
+    "stylelint": "^13.13.1",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0"
   },
-  "devDependencies": {
-    "eslint": "^7.23.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "standard-version": "^9.2.0",
-    "stylelint": "^13.12.0",
+  "peerDependencies": {
+    "stylelint": "^13.13.1",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0"
   }
