chore: Update dependencies

--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
   "scripts": {
     "lint": "eslint --format codeframe .",
     "test": "stylelint test.scss",
-    "release": "standard-version"
+    "release": "standard-version --sign"
   },
   "main": "index.js",
   "files": [
     "index.js"
   ],
   "devDependencies": {
-    "eslint": "^7.28.0",
+    "@pangolinjs/eslint-config": "^5.3.0",
+    "eslint": "^7.30.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
