--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
       - name: Set up Node.js
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
-          node-version: 15
+          node-version: 16
       - name: Install dependencies
         run: npm ci
       - name: Lint JS
@@ -25,9 +25,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
       - name: Set up Node.js
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
-          node-version: 15
+          node-version: 16
       - name: Install dependencies
         run: npm ci
       - name: Test configuration
