--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "stylelint-config"
   ],
   "scripts": {
-    "lint": "eslint --format codeframe .",
+    "lint": "eslint .",
     "test": "stylelint test.scss",
     "release": "standard-version --sign"
   },
@@ -31,20 +31,22 @@
     "index.js"
   ],
   "devDependencies": {
-    "@pangolinjs/eslint-config": "^5.3.0",
-    "eslint": "^7.30.0",
+    "@pangolinjs/eslint-config": "^5.3.1",
+    "eslint": "^8.1.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "standard-version": "^9.3.0",
-    "stylelint": "^13.13.1",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0"
+    "eslint-plugin-promise": "^5.1.1",
+    "postcss-scss": "^4.0.1",
+    "standard-version": "^9.3.2",
+    "stylelint": "^14.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.0.0"
   },
   "peerDependencies": {
-    "stylelint": "^13.13.1",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0"
+    "postcss-scss": "^4.0.1",
+    "stylelint": "^14.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.0.0"
   }
 }
