--- a/package.json
+++ b/package.json
@@ -1,52 +1,44 @@
 {
-  "name": "@pangolinjs/stylelint-config",
-  "version": "3.0.1",
-  "description": "Shareable stylelint config for Pangolin.js",
-  "license": "Hippocratic-3.0",
-  "homepage": "https://github.com/pangolinjs/stylelint-config",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pangolinjs/stylelint-config"
-  },
-  "author": {
-    "name": "Fynn Becker",
-    "email": "post@fynn.be"
-  },
-  "bugs": {
-    "url": "https://github.com/pangolinjs/stylelint-config/issues",
-    "email": "post@fynn.be"
-  },
-  "keywords": [
-    "pangolinjs",
-    "stylelint",
-    "stylelint-config"
-  ],
-  "scripts": {
-    "lint": "eslint .",
-    "test": "stylelint test.scss",
-    "release": "standard-version --sign"
-  },
-  "main": "index.js",
-  "files": [
-    "index.js"
-  ],
-  "devDependencies": {
-    "@pangolinjs/eslint-config": "^6.0.0",
-    "eslint": "^8.12.0",
-    "eslint-config-standard": "^17.0.0-1",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-n": "^15.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "postcss-scss": "^4.0.3",
-    "standard-version": "^9.3.2",
-    "stylelint": "^14.6.1",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.2.0"
-  },
-  "peerDependencies": {
-    "postcss-scss": "^4.0.3",
-    "stylelint": "^14.6.1",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.2.0"
-  }
+	"name": "@pangolinjs/stylelint-config",
+	"version": "3.0.1",
+	"description": "Shareable stylelint config for Pangolin.js",
+	"license": "Hippocratic-3.0",
+	"homepage": "https://github.com/pangolinjs/stylelint-config",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pangolinjs/stylelint-config"
+	},
+	"author": {
+		"name": "Fynn Becker",
+		"email": "post@fynn.be"
+	},
+	"bugs": {
+		"url": "https://github.com/pangolinjs/stylelint-config/issues",
+		"email": "post@fynn.be"
+	},
+	"keywords": [
+		"pangolinjs",
+		"stylelint",
+		"stylelint-config"
+	],
+	"scripts": {
+		"lint": "eslint .",
+		"test": "stylelint test/*.css",
+		"release": "standard-version --sign"
+	},
+	"main": "index.js",
+	"files": [
+		"index.js"
+	],
+	"devDependencies": {
+		"@pangolinjs/eslint-config": "^7.0.0",
+		"eslint": "^8.29.0",
+		"standard-version": "^9.5.0",
+		"stylelint": "^14.16.0",
+		"stylelint-order": "^5.0.0"
+	},
+	"peerDependencies": {
+		"stylelint": "^14.16.0",
+		"stylelint-order": "^5.0.0"
+	}
 }
